...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/notes_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

...
            app:elevation="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="0dp"
            app:hideOnScroll="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_24"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
            app:layout_anchor="@id/bottom_app_bar"
...
