...
			android:layout_marginStart="24dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="24dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="Title" />

		<TextView
			android:id="@+id/note_description"
			style="@style/LNote.Text.Description"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
...
			android:layout_marginTop="8dp"
			android:layout_marginEnd="24dp"
			app:layout_constraintBottom_toTopOf="@id/note_date_chip"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/note_title"
			tools:text="Description" />

		<com.lebartodev.lnote.utils.ui.DateChip
			android:id="@+id/note_date_chip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
...
