<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/edit_note_content"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_height="match_parent">

    <com.lebartodev.lnote.edit.creation.NoteCreationView
            android:id="@+id/bottom_sheet_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="24dp"
            android:focusable="true"
            android:paddingTop="4dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.lebartodev.lnote.utils.ui.LockableBottomSheetBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>